# time-series-with-bayesian-modelling

./: README.md  british airways.csv  environment.yml  part-01.ipynb  part-02.ipynb  part-03.ipynb  part-04.ipynb  part-05.ipynb  part-06.ipynb  part-07.ipynb  part-08.ipynb  part-09.ipynb  part-10.ipynb  part-11.ipynb  part-12.ipynb  part-13.ipynb  pyproject.toml
data/: h1weekly.csv  h2weekly.csv  pageviews-20190101-20201110.csv
