[tool.poetry]
name = "time-series-with-bayesian-modelling"
version = "0.1.0"
description = ""
authors = ["Vasily Kartashov <info@kartashov.com>"]
readme = "README.md"
packages = [{include = "time_series_with_bayesian_modelling"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2"
jupyter = "^1"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
