[tool.poetry]
name = "time-series-with-bayesian-modelling"
version = "0.1.0"
description = ""
authors = ["Vasily Kartashov <info@kartashov.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2"
jupyter = "^1"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.2"
pmdarima = "^2.0.3"
prophet = "1.1.1"
pystan = "2.19.1.1"
plotly = "^5.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
